t+zza:[[fına]] ([[WT:EDIT|Assisted]]) <again#41696373>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -204,6 +204,7 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 * West Frisian: {{t|fy|wer}}
 * Yiddish: {{t|yi|ווידער|sc=Hebr}}, {{t|yi|נאָכאַמאָל|sc=Hebr}}, {{t|yi|צוריק|sc=Hebr}}
 * Yucatec Maya: {{t|yua|ka’teen}}
+* Zazaki: {{t|zza|fına}}
 {{trans-bottom}}
 
 {{trans-top|used in a question to ask something one has forgotten}}
