--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -62,6 +62,7 @@ From {{etyl|enm|en}} {{m|enm|thaugh}}, {{m|enm|thagh|}}, from {{etyl|ang|en}} {{
 * Ukrainian: {{t|uk|тим не менш|tr=tym ne mensh|sc=Cyrl}}
 * Volapük: [[do#Volapük|do]]
 * Walloon: {{t+|wa|portant}}
+* Zazaki: {{t|zza|bo zi}}
 {{trans-bottom}}
 
 ===Conjunction===
