[[User:Daniel Carrero/term cleanup|term cleanup]] <mill#41702622>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -290,7 +290,7 @@ Ultimately from {{etyl|la|en}} {{m|la|millesimum}}.
 {{trans-bottom}}
 
 ===Etymology 3===
-From the noun {{term|#Noun|mill}}.
+From {{m|en|mill|pos=noun}}.
 
 ====Verb====
 {{en-verb}}
