--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -109,13 +109,13 @@ From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}, from {{et
 * Georgian: {{t|ka|წისქვილი}}
 * German: {{t+|de|Mühle|f}}
 * Greek: {{t+|el|μύλος|m}}, {{t|el|αλεστική μηχανή|f}}
-* Hebrew: {{t+|he|טחנה|tr=takhánah}}
-* Hindi: {{t+|hi|चक्की|f|tr=cakkī}}
+* Hebrew: {{t+|he|טַחֲנָה|tr=takhánah}}
+* Hindi: {{t+|hi|चक्की|f}}
 * Hungarian: {{t+|hu|malom}}
 * Ido: {{t+|io|muelilo}}
 * Irish: {{t|ga|muileann|m}}
 * Italian: {{t+|it|mulino|m}}
-* Japanese: {{t|ja|製粉所|tr=せいふんじょ, seifunjo}}, {{t|ja|粉砕機|tr=ふんさいき, funsaiki}}, {{t|ja|ミル|tr=miru}}
+* Japanese: {{t|ja|粉砕機|tr=ふんさいき, funsaiki}}, {{t|ja|ミル|tr=miru}}
 * Kazakh: {{t+|kk|диірмен|sc=Cyrl}}
 * Korean: {{t+|ko|방아}}
 {{trans-mid}}
@@ -184,18 +184,24 @@ From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}, from {{et
 * Ido: {{t+|io|mueleyo}}
 * Irish: {{t|ga|muileann|m}}
 * Italian: {{t+|it|mulino|m}}
-{{trans-mid}}
+* Japanese: {{t|ja|製粉所|tr=せいふんじょ, seifunjo}}
 * Korean: {{t+|ko|방앗간|sc=Kore}}
+{{trans-mid}}
 * Latgalian: {{t|ltg|patmalis}}, {{t|ltg|dziernovys}}
 * Latvian: {{t+|lv|dzirnavas|f-p}}
 * Lithuanian: {{t+|lt|malūnas|m}}
+* Macedonian: {{t|mk|млин|m}}, {{t|mk|ме́лница|f}}
 * Norwegian:
 *: Bokmål: {{t+|no|mølle|m|f}}
 *: Nynorsk: {{t|nn|mylne|f}}, {{t+|no|mølle|f}}
 * Old Prussian: {{t|prg|malunis|m}}
+* Polish: {{t+|pl|młyn|m}}
 * Portuguese: {{t+|pt|moinho|m}}
 * Russian: {{t+|ru|ме́льница|f}}
 * Scottish Gaelic: {{t|gd|muileann|m|f}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|млин|m|sc=Cyrl}}
+*: Roman: {{t+|sh|mlin|m}}
 * Slovak: {{t|sk|mlyn|m}}
 * Slovene: {{t+|sl|mlin|m}}
 * Spanish: {{t+|es|molino|m}}
@@ -210,6 +216,8 @@ From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}, from {{et
 
 {{trans-top|manufacturing plant}}
 * Armenian: {{t+|hy|գործարան}}
+* Chinese:
+*: Mandarin: {{t+|cmn|工廠|sc=Hani}}, {{t+|cmn|工厂|tr=gōngchǎng|sc=Hani}}
 * Czech: {{t+|cs|továrna|f}}
 * Dutch: {{t+|nl|fabriek|f}} {{qualifier|general}}, {{t+|nl|papierfabriek|f}} {{qualifier|for paper}}, {{t|nl|staalfabriek|f}} {{qualifier|for steel}}, {{t+|nl|textielfabriek|f}} {{qualifier|for textiles}}
 * Estonian: {{t|et|tehas}}
@@ -217,9 +225,11 @@ From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}, from {{et
 * French: {{t+|fr|manufacture|f}}, {{t+|fr|usine|f}}, {{t+|fr|fabrique|f}}
 * German: {{t+|de|Fabrik|f}} {{qualifier|general}}, {{t+|de|Werk|n}} {{qualifier|general}} {{t|de|Papiermühle|f}} {{qualifier|for paper}}
 * Greek: {{t+|el|εργοστάσιο|n}}
-* Hebrew: {{t+|he|טחנה|tr=tachánah}}
+* Hebrew: {{t+|he|טַחֲנָה|tr=takhánah}}
 * Irish: {{t|ga|muileann|m}}
+* Japanese: {{t+|ja|工場|tr=こうじょう, kōjō|sc=Jpan}}
 {{trans-mid}}
+* Korean: {{t+|ko|공장|sc=Kore}} ({{t+|ko|工場|sc=Kore}})
 * Macedonian: {{t|mk|фа́брика|f}}, {{t|mk|по́гон|m}}, {{t|mk|работи́лница|f}}
 * Norwegian:
 *: Bokmål: {{t+|no|mølle|m|f}}
