--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -69,8 +69,8 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Bashkir: {{t|ba|утрау}}
 * Basque: {{t+|eu|irla}}, {{t+|eu|uharte}}
 * Bats: {{t|bbl|გუბ}}
-* Belarusian: {{t|be|во́страў|m}}, {{qualifier|small}} {{t|be|вы́спа|f}}
-* Bengali: {{t|bn|দ্বীপ|tr=dip|sc=Beng}}
+* Belarusian: {{t|be|во́страў|m}}, {{t|be|вы́спа|f}}
+* Bengali: {{t|bn|দ্বীপ|sc=Beng}}
 * Bhojpuri: {{t|bho|द्वीप|tr=dvīpa}}
 * Bislama: {{t|bi|aelan}}
 * Breton: {{t+|br|enez|f}}
@@ -127,7 +127,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Hausa: {{t|ha|tsibiri}}
 * Hawaiian: {{t|haw|moku}}
 * Hebrew: {{t+|he|אִי|m|tr=i}}
-* Hindi: {{t+|hi|द्वीप|m|tr=dvīp|sc=Deva}}, {{t+|hi|टापू|m|tr=ṭāpū|sc=Deva}}
+* Hindi: {{t+|hi|द्वीप|m|sc=Deva}}, {{t+|hi|टापू|m|sc=Deva}}
 * Hungarian: {{t+|hu|sziget}}
 * Icelandic: {{t+|is|ey|f}}, {{t+|is|eyja}}
 * Ido: {{t+|io|insulo}}
@@ -183,7 +183,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Manx: {{t|gv|ellan|m|f}}, {{t|gv|innis|f}}, {{t|gv|innys|f}}, {{t|gv|insh|f}}
 * Maori: {{t|mi|motu}}
 * Mapudungun: {{t|arn|wapi}}
-* Marathi: {{t|mr|बेट|n|tr=veṭ|sc=Deva}}
+* Marathi: {{t|mr|बेट|sc=Deva}}
 * Mari:
 *: Eastern Mari: {{t|chm|отро}}
 *: Western Mari: {{t|mrj|ошмаоты}}
@@ -262,9 +262,9 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Tahitian: {{t|ty|motu}}
 * Tajik: {{t+|tg|ҷазира}}
 * Tamil: {{t+|ta|தீவு}}
-* Tatar: {{t|tt|utraw}}, {{t|tt|атау}}
+* Tatar: {{t|tt|атау}}
 * Telugu: {{t+|te|దీవి}}, {{t+|te|ద్వీపము}}
-* Thai: {{t+|th|เกาะ|tr=gòr}}
+* Thai: {{t+|th|เกาะ}}
 * Tibetan: {{t|bo|མཚོ་གླིང|sc=Tibt}}, {{t|bo|གླིང་ཕྲན|sc=Tibt}}
 * Tigrinya: {{t|ti|ደሴት|f|sc=Ethi}}
 * Tlingit: {{t|tli|x'áat'}}
@@ -293,7 +293,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Wolof: {{t|wo|dun}}
 * Xhosa: {{t|xh|isiqithi|c7|c8}}
 * Yakut: {{t|sah|арыы}}
-* Yiddish: {{t|yi|אינדזל|m|tr=indzl}}
+* Yiddish: {{t|yi|אינדזל|m}}
 * Yonaguni: {{t|yoi|ダマ|tr=dama}}
 * Yoruba: {{t|yo|erékùṣù}}
 * Yup'ik: {{t|esu|qikertaq}}
