t+lo:[[ເກາະ]] t-balance ([[WT:EDIT|Assisted]]) <island#41720512>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -159,7 +159,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Kyrgyz: {{t+|ky|арал}}
 * Ladino: {{t|lad|adá|f}}, {{t|lad|isola|f}}, {{t|lad|izla|f}}
 * Lakota: {{t|lkt|wíta}}
-* Lao: {{t|lo|ດອນ|sc=Laoo}}
+* Lao: {{t|lo|ດອນ|sc=Laoo}}, {{t+|lo|ເກາະ}}
 * Latgalian: {{qualifier|ocean, sea}} {{t|ltg|jiursola}}, {{qualifier|lake}} {{t|ltg|azarsola}}, {{qualifier|river}} {{t|ltg|upsola}}
 * Latin: {{t+|la|insula|f}}
 * Latvian: {{t+|lv|sala|f}}
@@ -169,10 +169,10 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Livvi: {{t|olo|suari}}
 * Lojban: {{t|jbo|daplu}}
 * Lombard: {{t|lmo|isula|f}}
+{{trans-mid}}
 * Low German: {{t|nds|Insel|f}}, {{t|nds|Ailand|n}}
 *: Dutch Low Saxon: {{t+|nds-nl|eilaand|n}}
 * Ludian: {{t|lud|suar'}}
-{{trans-mid}}
 * Luganda: {{t|lg|ekizinga}}
 * Luxembourgish: {{t|lb|Insel|f}}
 * Macedonian: {{t|mk|остров|m}}
