--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -1,5 +1,5 @@
 ==English==
-
+ [[Category:English 4-syllable words]]
 ===Etymology===
 From {{etyl|la|en}} {{m|la|enumerātus}} < {{m|la|enumerō}}.
 
