--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -92,7 +92,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{m|ang|stæf}}, from 
 * Latin: {{t|la|baculum}}
 * Macedonian: {{t|mk|стап|m|tr=stap}}
 * Malagasy: {{t+|mg|langilangy}}, {{t+|mg|tehina}}
-* Maori: {{t|mi|turupou}}, {{t|mi|huakau}} {{qualifier|when used as a weapon}}
+* Maori: {{t|mi|turupou}}, {{t|mi|huakau}} {{qualifier|when used as a weapon}}, {{t|mi|titipou}}
 * Norwegian: {{t|no|stav}}
 * Persian: {{t+|fa|عصا|tr='asâ|sc=fa-Arab}}
 * Polish: {{t+|pl|laska|f}}, {{t+|pl|kij|m}}
