--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -165,7 +165,7 @@ From {{inh|en|enm|chin}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Lojban: {{t|jbo|xejni'a}}
 * Lombard: {{t|lmo|barbòs|m}}, {{t|lmo|barbozz|m}}
 * Lotud: {{t|dtr|roo}}
-* Low German: {{t|nds|Kinn}}
+* Low German:
 *: German Low German: {{t|nds-de|Kinn|n}}
 * Lower Sorbian: {{t|dsb|pódguba|f}}
 * Luxembourgish: {{t|lb|Kënn|m}}
