--- a/en/u/unfriendliness.742226.wikitext
+++ b/en/u/unfriendliness.742226.wikitext
@@ -7,7 +7,20 @@
 {{en-noun|~|es}}
 
 # {{lb|en|uncountable}} The state of being [[unfriendly]].
-# {{lb|en|countable}} An unfriendly act.
+# {{lb|en|countable}} An unfriendly act, unfriendly acts / actions.
+
+====Translations====
+{{trans-top|the quality of being unfriendly}}
+* German: {{t+|de|Unfreundlichkeit|f}}
+{{trans-mid}}
+* Low German:
+*: German Low German: {{t|nds-de|Unfründlichkeit|f}}
+{{trans-bottom}}
+
+{{trans-top|an unfriendly act, unfriendly acts / actions}}
+* German: {{t+|de|Unfreundlichkeiten|f|p}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[et:unfriendliness]]
 [[ko:unfriendliness]]
