--- a/en/u/unfriendliness.742226.wikitext
+++ b/en/u/unfriendliness.742226.wikitext
@@ -9,6 +9,10 @@
 # {{lb|en|uncountable}} The state of being [[unfriendly]].
 # {{lb|en|countable}} An unfriendly act, unfriendly acts / actions.
 
+====Antonyms====
+
+* [[friendliness]]
+
 ====Translations====
 {{trans-top|the quality of being unfriendly}}
 * German: {{t+|de|Unfreundlichkeit|f}}
