--- a/en/b/bailer.801537.wikitext
+++ b/en/b/bailer.801537.wikitext
@@ -22,6 +22,7 @@ From {{m|en|bail}}.
 {{trans-mid}}
 * Maori: {{t|mi|tīheru}}
 * Ngazidja Comorian: {{t|zdj|upvo|c11|c10a}}
+* Russian: {{t+|ru|черпак|m}}
 * Swedish: {{t|sv|öskar|n}}
 {{trans-bottom}}
 
