t+cmn:[[枚举]] ([[WT:EDIT|Assisted]]) <enumerate#41758070>

--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -12,6 +12,8 @@ From {{etyl|la|en}} {{m|la|enumerātus}} < {{m|la|enumerō}}.
 ====Translations====
 {{trans-top|to specify each member of a sequence individually in incrementing order}}
 * Bulgarian: {{t+|bg|изброявам|sc=Cyrl}}
+* Chinese:
+*: Mandarin: {{t+|cmn|枚举|tr=méijǔ}}
 * Dutch: {{t|nl|uittellen}}
 * Finnish: {{t+|fi|luetella}}
 * French: {{t+|fr|énoncer}}
