t+mi:[[mamare]] ([[WT:EDIT|Assisted]]) <badger#41763279>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -167,6 +167,7 @@ From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||ba
 * Greek: {{t+|el|ενοχλώ}}, {{t+|el|παρενοχλώ}}, {{t+|el|πειράζω}}
 * Hungarian: {{t+|hu|piszkál}}
 * Latin: {{t|la|sollicitō}}, {{t|la|inrītō}}, {{t|la|irrītō}}
+* Maori: {{t|mi|mamare}} {{qualifier|with constant questions}}
 * Russian: {{t+|ru|дразнить}}
 * Spanish: {{t+|es|fastidiar}}, {{t+|es|molestar}}
 * Tok Pisin: [[bagarapim]] [[sindaun]] bilong<!-- if these words make up a single idiom, they should be wikified as a single entity-->
