--- a/en/s/synæresis.742365.wikitext
+++ b/en/s/synæresis.742365.wikitext
@@ -11,3 +11,18 @@
 #*: '''Synæresis''', spirantization, and sonorant-degemination
 
 [[Category:English terms spelled with Æ]]
+
+----
+
+==Latin==
+
+===Noun===
+{{la-noun|synæresis|synæreseōs|f|third}}
+
+# {{alternative typography of|synaeresis|lang=la}}
+#* {{seecites|lang=la}}
+
+====Declension====
+{{la-decl-noun-table|title=[[Appendix:Latin third declension|Third declension]], Greek type, with some i-stem forms.|nom_sg=synæresis|gen_sg=synæreseōs|dat_sg=synæresī|acc_sg=synæresin|acc_sg2=synæresim|acc_sg3=synæresem|abl_sg=synæresī|voc_sg=*synæresi|voc_sg2=*synæresis|nom_pl=synæresēs|gen_pl=synæresium|gen_pl2=synæreseōn|dat_pl=*synæresibus|acc_pl=synæresēs|acc_pl2=synæreseis|abl_pl=synæresibus|voc_pl=*synæresēs}}
+
+[[Category:Latin terms spelled with Æ|synaeresis]]
