/* Related terms */ [[double bubble conjecture]] <bubble#41796653>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -63,13 +63,14 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare Middle Dutch {{m|d
 * {{l|en|bubble era}}
 {{rel-mid3}}
 * {{l|en|bubble gum}}
-* {{l|en|bubble jet printer}}
+* {{l|en|bubblejet}}
 * {{l|en|bubble romper}}
 * {{l|en|bubble team}}
 * {{l|en|bubble under}}
 * {{l|en|bubble wrap}}
 * {{l|en|burst someone's bubble}}
 {{rel-mid3}}
+* {{l|en|double bubble conjecture}}
 * {{l|en|down bubble}}
 * {{l|en|housing bubble}}
 * {{l|en|land bubble}}
