--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -52,7 +52,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare Middle Dutch {{m|d
 ====Synonyms====
 * (a laugh) [[giraffe]], [[bubble bath]]
 
-====Related terms====
+====Derived terms====
 {{rel-top3|Terms derived from ''bubble'' (noun)}}
 * {{l|en|boy in the bubble}}
 * {{l|en|bubble and squeak}}
