--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -342,8 +342,9 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Finnish: {{t+|fi|palkki}}
 * French: {{t+|fr|bande|f}}
 * German: {{t+|de|Schrägbalken|m}}
-* Italian: {{t+|it|banda|f}}
+* Irish: {{t|ga|bandán|m}}
 {{trans-mid}}
+* Italian: {{t+|it|banda|f}}
 * Polish: {{t|pl|skos|m}}
 * Portuguese: {{t+|pt|banda}}
 * Spanish: {{t+|es|banda|f}}
