--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -60,17 +60,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 # {{lb|en|intransitive|nautical}} To [[swing]] the [[body]] when [[rowing]].<!--activity-->
 
 ====Derived terms====
-{{rel-top|terms derived from ''bend (verb)''}}
-* {{l|en|bend down}}
-* {{l|en|bend over}}
-* {{l|en|bend over backwards}}
-* {{l|en|bend somebody's ear}}
-{{rel-mid}}
-* {{l|en|on bended knee}}
-* {{l|en|bend one's elbow}}
-* {{l|en|bend out of shape}}
-* {{l|en|bend the truth}}
-{{rel-bottom}}
+{{der4|title=terms derived from ''bend (verb)''|bend down|bend over|bend over backwards|bend somebody's ear|on bended knee|bend one's elbow|bend out of shape|bend the truth|lang=en}}
 
 ====Translations====
 {{trans-top|to cause to shape into a curve}}
