--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -9,7 +9,8 @@
 ** {{homophones|lang=en|@}}
 * {{qualifier|unstressed}} {{IPA|/ət/|lang=en}}
 ** {{homophones|lang=en|it}} {{qualifier|unstressed; only in some accents}}
-[[Category:English 1-syllable words]]
+<!-- 1 syllable words !-->
+
 
 ===Etymology 1===
 From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{inh|en|gem-pro|*at||at, near, to}}, from {{inh|en|ine-pro|*ád||near, at}}. Cognate with {{cog|sco|at||at}}, {{cog|frr|äät}}, {{m|frr|äit}}, {{m|frr|et}}, {{m|frr|it||at}}, {{cog|da|at||to}}, {{cog|fo|at||at, to, toward}}, {{cog|no|åt||to}}, {{cog|sv|åt||for, toward}}, {{cog|is|að||to, towards}}, {{cog|got|𐌰𐍄||at}}, {{cog|la|ad||to, near}}.
@@ -254,6 +255,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 
 [[Category:English basic words]]
 [[Category:English two-letter words]]
+[[Category:English 1-syllable words]] 
 
 ----
 
