--- a/en/p/patrilateral.746570.wikitext
+++ b/en/p/patrilateral.746570.wikitext
@@ -1,6 +1,8 @@
 {{also|patrilatéral}}
 ==English==
-
+===Pronunciation===
+{{rfp|lang=en}}
+ <!-- 5 syllable words !-->
 ===Etymology===
 {{prefix|patri|lateral|lang=en}}
 
@@ -18,3 +20,4 @@
 
 ====Related terms====
 * {{l|en|patrilineal}}
+[[Category:English 5-syllable words]]
