--- a/en/r/robing.720156.wikitext
+++ b/en/r/robing.720156.wikitext
@@ -8,7 +8,7 @@
 ===Noun===
 {{en-noun|~}}
 
-# {{lb|en|historical|mostly|plural}} The [[trimming]]s around the [[neck]] and [[bodice]] of a [[gown]].
+# {{lb|en|historical|usually plural}} The [[trimming]]s around the [[neck]] and [[bodice]] of a [[gown]].
 
 ===Anagrams===
 * {{l|en|boring}}
