t+bo:[[ཨོག་མ]] ([[WT:EDIT|Assisted]]) <chin#41851707>

--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -242,7 +242,7 @@ From {{inh|en|enm|chin}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Tatar: {{t+|tt|ияк|sc=Cyrl}}
 * Telugu: {{t+|te|గడ్డం|sc=Telu}}, {{t+|te|చుబుకం|sc=Telu}}
 * Thai: {{t+|th|คาง|tr=kaang|sc=Thai}}
-* Tibetan: {{t|bo|ཀོ་ཀོ}}
+* Tibetan: {{t|bo|ཀོ་ཀོ}}, {{t|bo|ཨོག་མ}}
 * Tigrinya: {{t+|ti|መንከስ|sc=Ethi}}
 * Timugon Murut: {{t|tih|salura}}
 * Tswana: {{t|sn|seledu}}
