t+ar:[[قسمة]] ([[WT:EDIT|Assisted]]) <division#41858239>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -131,6 +131,7 @@
 
 {{trans-top|arithmetic: process of dividing a number by another}}
 * Afrikaans: {{t|af|deel}}
+* Arabic: {{t|ar|قِسْمَة|f}}
 * Armenian: {{t+|hy|բաժանում}}
 * Bashkir: {{t|ba|бүлеү|sc=Cyrl}}
 * Bulgarian: {{t+|bg|деление|n}}
