--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -39,7 +39,7 @@ When '''bade''' or '''bad''' is used in formal speech the pronunciation /bæd/ m
 * Dutch: {{t+|nl|gebieden}}, {{t+|nl|gelasten}}
 * Finnish: {{t+|fi|pyytää}}, {{t+|fi|käskeä}}
 {{trans-mid}}
-* French: {{t+|fr|demander}}
+* French: {{t+|fr|demander}}, {{t+|fr|ordonner}}
 * Hungarian: {{t+|hu|megparancsol}}, {{t+|hu|elrendel}}
 * Portuguese: {{t+|pt|mandar}}, {{t+|pt|ordenar}}
 * Russian: {{t+|ru|прика́зывать|impf}}, {{t+|ru|приказа́ть|pf}}
