--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -41,7 +41,7 @@ When '''bade''' or '''bad''' is used in formal speech the pronunciation /bæd/ m
 {{trans-mid}}
 * French: {{t+|fr|demander}}, {{t+|fr|ordonner}}
 * Hungarian: {{t+|hu|megparancsol}}, {{t+|hu|elrendel}}
-* Occitan: {{t|oc|ordenar}}
+* Occitan: {{t|oc|ordenar}}, {{t+|oc|demandar}}
 * Portuguese: {{t+|pt|mandar}}, {{t+|pt|ordenar}}
 * Russian: {{t+|ru|прика́зывать|impf}}, {{t+|ru|приказа́ть|pf}}
 * Ukrainian: {{t|uk|нака́зувати|impf|sc=Cyrl}}, {{t|uk|наказа́ти|pf}}
