--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -54,7 +54,7 @@ When '''bade''' or '''bad''' is used in formal speech the pronunciation /bæd/ m
 {{trans-mid}}
 * French: {{t+|fr|demander}}, {{t+|fr|inviter}}, {{t+|fr|proposer}}
 * Hungarian: {{t+|hu|meghív}}
-* Occitan: {{t|oc|invitar}}, {{t+|oc|pregar}}
+* Occitan: {{t|oc|invitar}}, {{t+|oc|pregar}}, {{t|oc|propausar}}
 * Russian: {{t+|ru|приглаша́ть|impf}}, {{t+|ru|пригласи́ть|pf}}
 * Swedish: {{t+|sv|bjuda}}, {{t+|sv|bjuda in}}
 {{trans-bottom}}
