--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -114,6 +114,7 @@ From {{etyl|enm|en}} {{m|enm|beden}}, from the {{etyl|ang|en}} verb {{m|ang|bēo
 {{trans-mid}}
 * French: {{t+|fr|soumissionner}} (for contract)
 * German: {{t+|de|bieten}}
+* Occitan: {{t|oc|ofrir}}
 * Spanish: {{t+|es|ofrecer}}, {{t+|es|ofertar}}
 * Swedish: {{t+|sv|bjuda}}
 {{trans-bottom}}
