--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -183,7 +183,7 @@ From {{etyl|enm|en}} {{m|enm|beden}}, from the {{etyl|ang|en}} verb {{m|ang|bēo
 * Norwegian:
 *: Bokmål: {{t+|no|bud|n}}
 *: Nynorsk: {{t|nn|bud|n}}
-* Occitan: {{t|oc|encaresir}}
+* Occitan: {{t|oc|encaresir}}, {{t|oc|encarir}}
 * Persian: {{t|fa|دو زن داری|sc=fa-Arab}}
 * Polish: {{t+|pl|oferta|f}}
 * Portuguese: {{t+|pt|licitação|f}}, {{t+|pt|lance|m}}
