--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -99,6 +99,7 @@ From 16th century {{m|en|cole-florye}}. Compare Latin {{m|la|caulis}}, French {{
 * German: {{t+|de|Blumenkohl|m}}
 * Greek: {{t+|el|κουνουπίδι|n}}
 * Hungarian: {{t+|hu|karfiol}}
+* Italian: {{t|it|cavolfiore|m}}
 * Navajo: {{t|nv|chʼil łigaii}}
 * Norwegian:
 *: Bokmål: {{t|nb|blomkål|m}}
@@ -124,7 +125,6 @@ From 16th century {{m|en|cole-florye}}. Compare Latin {{m|la|caulis}}, French {{
 * {{ttbc|he}}: {{t-check|he|כרובית|f}} (kruvít)
 * {{ttbc|hi}}: {{t-check|hi|गोभी}} (gobhī)
 * {{ttbc|id}}: {{t-check|id|bungkul}}; [[kubis]] [[bunga]]
-* Italian: {{t+check|it|cavolfiore|m}}
 * Latin: {{t+check|la|brassica|f}}
 * Maltese: {{t-check|mt|pastarda|f}}
 * Neapolitan: {{t-check|nap|cavelesciore}}
