t+ar:[[طرح]] ([[WT:EDIT|Assisted]]) <subtraction#41868110>

--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -18,6 +18,7 @@ From {{etyl|LL|en}} {{m|la|subtractio}}.
 
 ====Translations====
 {{trans-top|process}}
+* Arabic: {{t|ar|طَرْح|m}}
 * Armenian: {{t+|hy|հանում}}
 * Bashkir: {{t|ba|алыу|sc=Cyrl}}
 * Catalan: {{t|ca|sostracció|f}}
