--- a/en/s/SETI.26210.wikitext
+++ b/en/s/SETI.26210.wikitext
@@ -16,5 +16,10 @@
 ===Anagrams===
 * {{l|en|ETSI}}, {{l|en|site}}, {{l|en|ties}}
 
+===See also===
+* {{pedialite|SETI Institute}}
+* {{pedialite|SETI@home}}
+* {{pedialite|Active SETI}}
+
 [[et:SETI]]
 [[tr:SETI]]
