/* Noun */Better definition <ulterior motive#41870435>

--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -3,8 +3,7 @@
 ===Noun===
 {{en-noun}}
 
-# A [[hidden]] or [[secretly]] [[plotted]] reasoning for wanting something or [[acting]] a certain way towards really anything. Could be towards a person, usually for profit or favorable to themself, have an advantage over others. 
-Can be any situation really. 
+# A [[hidden]] or [[secretly]] [[plotted]] reasoning for wanting something or [[acting]] a certain way towards really anything. Could be towards a person, usually for profit or favorable to themself, have an advantage over others. Can be any situation really. 
 #* Turns out the new employee at the store had ulterior motives. He was caught stealing.
 #* This man pretended to be genuine just to try and sleep with me, get lost creep. 
 
