--- a/en/a/allogamy.775548.wikitext
+++ b/en/a/allogamy.775548.wikitext
@@ -16,8 +16,9 @@
 {{trans-top|fertilization}}
 * Bulgarian: {{t|bg|кръстосано опрашване}}
 * French: {{t+|fr|allogamie}}
-{{trans-mid}}
 * Galician: {{t+|gl|alogamia|f}}
+{{trans-mid}}
+* Italian: {{t|it|allogamia|f}}
 * Portuguese: {{t|pt|alogamia|f}}
 * Spanish: {{t|es|alogamia|f}}
 {{trans-bottom}}
