t+el:[[αποταμιεύω]] ([[WT:EDIT|Assisted]]) <save up#41882919>

--- a/en/s/save up.746191.wikitext
+++ b/en/s/save up.746191.wikitext
@@ -11,6 +11,7 @@
 {{trans-top|to accumulate money for a specific purpose}}
 {{trans-mid}}
 * German: {{t+|de|zusammensparen}}
+* Greek: {{t+|el|αποταμιεύω}}
 * Maori: {{t|mi|penapena}}
 {{trans-bottom}}
 
