t+ka:[[სამხედრო ტყვე]] ([[WT:EDIT|Assisted]]) <prisoner of war#41883128>

--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -23,6 +23,7 @@
 * Dutch: {{t+|nl|krijgsgevangene|m|f}}, {{t|nl|oorlogsgevangene|m|f}}
 * Finnish: {{t+|fi|sotavanki}}
 * French: {{t+|fr|prisonnier de guerre|m}}
+* Georgian: {{t|ka|სამხედრო ტყვე}}
 * German: {{t+|de|Kriegsgefangener|m}}, {{t|de|Kriegsgefangene|f}}
 * Greek: {{t|el|αιχμάλωτος πολέμου|m|f}}
 * Icelandic: {{t|is|stríðsfangi|m}}
