--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -4,6 +4,9 @@
 ===Etymology===
 From {{etyl|es|en}} {{m|es|las}} {{m|es|vegas||the meadows}}.
 
+===Pronunciation===
+* {{IPA|/lɑs ˈveɪɡəs/}}
+
 ===Proper noun===
 {{en-proper noun}}
 
