/* German */ +la <Zacharias#41911191>

--- a/en/z/Zacharias.855854.wikitext
+++ b/en/z/Zacharias.855854.wikitext
@@ -39,6 +39,26 @@ From {{etyl|grc|en}} {{m|grc|Ζαχαρίας}}, the New Testament form of the f
 [[Category:de:Biblical characters]]
 [[Category:de:Individuals]]
 
+----
+
+==Latin==
+
+===Etymology===
+{{bor|la|grc|Ζαχαρίᾱς}}, from {{der|la|he|זְכַרְיָה|tr=z'kharyá}}.
+
+===Pronunciation===
+*{{la-IPA|Zachariās}}
+
+===Proper noun===
+{{la-proper noun|Zachariās|Zachariae|g=m|decl=first}}
+
+# {{l|en|Zechariah}}
+
+====Declension====
+{{la-decl-1st-Greek-Ma|Zachari|num=sg}}
+
+{{catlangcode|la|Biblical characters}}
+
 [[de:Zacharias]]
 [[es:Zacharias]]
 [[io:Zacharias]]
