t+af:[[das]] ([[WT:EDIT|Assisted]]) <badger#41918793>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -41,7 +41,7 @@ From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||ba
 
 =====Translations=====
 {{trans-top|mammal}}
-* Afrikaans: {{t|af|ratel}}
+* Afrikaans: {{t|af|ratel}}, {{t+|af|das}}
 * Albanian: {{t+|sq|baldosë|f}}
 * Arabic: {{t|ar|غُرَيْر|m}}
 * Armenian: {{t+|hy|գորշուկ}}, {{t+|hy|փորսուղ}}, {{t|hy|իշղար}}
