--- a/en/r/reburial.741531.wikitext
+++ b/en/r/reburial.741531.wikitext
@@ -1,7 +1,11 @@
 ==English==
 
+===Etymology===
+{{prefix|en|re|burial}}
+
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
+
 # The act of [[rebury]]ing; a second or subsequent [[burial]].
 
 ====Translations====
