--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -182,6 +182,9 @@ From {{etyl|la|nb}} {{m|la|minimum}}
 ====Antonyms====
 * {{l|nb|maksimum}}
 
+====Derived terms====
+* {{l|nb|minimumskrav}}
+
 ===References===
 * {{R:The Bokmål Dictionary}}
 
