--- a/en/n/nonathletic.776145.wikitext
+++ b/en/n/nonathletic.776145.wikitext
@@ -1,5 +1,9 @@
 ==English==
 
+===Etymology===
+{{prefix|en|non|athletic}}
+
 ===Adjective===
-{{en-adj}}
+{{en-adj|-}}
+
 # Having no [[athletic]] ability (or interest), especially describing one whose interests are academic.
