--- a/en/n/nonattendance.776146.wikitext
+++ b/en/n/nonattendance.776146.wikitext
@@ -1,7 +1,11 @@
 ==English==
 
+===Etymology===
+{{prefix|en|non|attendance}}
+
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
+
 # A failure to [[attend]]; [[nonappearance]].
 
 [[ml:nonattendance]]
