--- a/en/a/a life of its own.803367.wikitext
+++ b/en/a/a life of its own.803367.wikitext
@@ -4,11 +4,11 @@
 {{en-noun|lives of their own}}
 
 # {{lb|en|idiomatic}} An independent existence with some characteristics of life.
-#* '''1996''', George Steiner, ''Tolstoy or Dostoevsky: An Essay in the Old Criticism'', page 181
-#*: Sartre rejects the notion that an imagined character possesses, in any rational sense, "'''a life of its own'''".
+#* {{quote-text|year=1996|author=George Steiner|title=Tolstoy or Dostoevsky: An Essay in the Old Criticism|page=181
+|passage=Sartre rejects the notion that an imagined character possesses, in any rational sense, "'''a life of its own'''".}}
 #* '''2002''', John Seely Brown, Paul Duguid, ''The Social Life of Information'', page 18
 #*: […], information takes on not only a speed of its own, but '''a life of its own'''.
-#* '''2003''', Kristin Hunter Lattany, ''The Lakestown Rebellion'', page 185
-#*: A massive hangover with '''a life of its own''' kept Fess pinned to his bed most of Sunday.
+#* {{quote-text|year=2003|author=Kristin Hunter Lattany|title=The Lakestown Rebellion|page=185
+|passage=A massive hangover with '''a life of its own''' kept Fess pinned to his bed most of Sunday.}}
 
 [[Category:English idiomatic construction prototypes]]
