--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -191,7 +191,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Venetian: {{t|vec|schirat|m}}
 * Vietnamese: {{t|vi|họ sóc}}, {{t+|vi|sóc}}
 * Vilamovian: {{t|wym|ǡh́kjēnła|n}}
-* Volapük: {{qualifier|♂♀}} {{t+|vo|yat}}, {{qualifier|♂}} {{t|vo|hiyat}}, {{qualifier|♀}} {{t|vo|jiyat}}, {{qualifier|♂♀ offspring, young}} {{t|vo|yatül}}, {{qualifier|♂ offspring, young}} {{t|vo|hiyatül}}, {{qualifier|♀ offspring, young}} {{t|vo|jiyatül}}
+* Volapük: {{t+|vo|yat}}
 * Walloon: {{t+|wa|spirou|m}}, {{t+|wa|skiron|m}}
 * Welsh: {{t+|cy|gwiwer|f}}
 * West Coast Bajau: {{t|bdr|basing}}
