--- a/en/e/engraft.773715.wikitext
+++ b/en/e/engraft.773715.wikitext
@@ -15,6 +15,13 @@ From earlier {{m|en|ingraft}}, equivalent to {{prefix|en|gloss1=in|graft|lang=en
 
 # To insert, as a [[scion]] of one tree or plant into another, for the purpose of [[propagation]]; [[graft]] onto a plant
 # To [[fix]] firmly into place
+#* Sonnet 15, William Shakespeare
+#*:Then the conceit of this inconstant stay
+#*:Sets you most rich in youth before my sight,
+#*:Where wasteful Time debateth with Decay,
+#*:To change your day of youth to sullied night;
+#*:And all in war with Time for love of you,
+#*:As he takes from you, I '''engraft''' you new.
 
 ====Quotations====
 * {{seeCites}}
