--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -92,6 +92,7 @@ From {{etyl|enm|en}} {{m|enm|fraccioun||a breaking}}, from {{etyl|xno|en}}, from
 {{trans-bottom}}
 
 {{trans-top|arithmetic: ratio}}
+* Arabic: {{t+|ar|كَسْر|m}}, {{t|ar|كُسُور|m-p}}
 * Armenian: {{t+|hy|կոտորակ}}
 * Bulgarian: {{t|bg|дроб|f|sc=Cyrl}}
 * Catalan: {{t+|ca|fracció}}, {{g|f}}
