/* Adjective */ <sabre-toothed#41985220>

--- a/en/s/sabre-toothed.801836.wikitext
+++ b/en/s/sabre-toothed.801836.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Adjective===
-{{en-adj|-}}
+{{en-adj|head=[[sabre]]-[[toothed]]|-}}
 
 # Having [[massive]] [[curved]] [[upper]] [[canine teeth]]
 
