not obs <handsomer#41995437>

--- a/en/h/handsomer.720051.wikitext
+++ b/en/h/handsomer.720051.wikitext
@@ -3,7 +3,7 @@
 ===Adjective===
 {{head|en|adjective comparative form}}
 
-# {{lb|en|obsolete}} {{en-comparative of|handsome}}
+# {{en-comparative of|handsome}}
 
 [[ca:handsomer]]
 [[fr:handsomer]]
