--- a/en/w/what's good.801534.wikitext
+++ b/en/w/what's good.801534.wikitext
@@ -8,13 +8,12 @@
 
 ====Translations====
 {{trans-top|''(colloquial)'' what is good, especially in reference to food}}
+* Finnish: {{t|fi|[[mikä]] [[on]] [[hyvää]]}}
 * Kurdish:
 *: Sorani: {{t|ku|چی باشه‌؟|tr=çi bashe?|sc=ku-Arab}}
 {{trans-mid}}
 {{trans-bottom}}
 
-{{trans-top|''(slang)'' what's up}}
-{{trans-mid}}
-{{trans-bottom}}
+{{trans-see|what's up}}
 
 [[Category:English phrasebook]]
