t+th:[[๒ พงศ์กษัตริย์]] ([[WT:EDIT|Assisted]]) <2 Kings#42010363>

--- a/en/2/2 Kings.801706.wikitext
+++ b/en/2/2 Kings.801706.wikitext
@@ -25,6 +25,7 @@
 * Irish: {{t|ga|Dara Leabhar na Ríthe|m}}, {{t|ga|2 Ríthe|m}}
 * Japanese: {{t|ja|列王記下|tr=retsuō kige|sc=Jpan}}
 * Spanish: {{t|es|2 Reyes|m-p}}
+* Thai: {{t|th|๒ พงศ์กษัตริย์}}
 {{trans-bottom}}
 
 [[Category:English terms spelled with 2]]
