t+th:[[๑ ซามูเอล]] ([[WT:EDIT|Assisted]]) <1 Samuel#42010459>

--- a/en/1/1 Samuel.801687.wikitext
+++ b/en/1/1 Samuel.801687.wikitext
@@ -24,6 +24,7 @@
 * Irish: {{t|ga|Céad Leabhar Shamúéil|m}}, {{t|ga|1 Samúéil|m}}
 * Japanese: {{t|ja|サムエル記上|tr=samueru kijō}}
 * Spanish: {{t|es|1 Samuel|m}}
+* Thai: {{t|th|๑ ซามูเอล}}
 {{trans-bottom}}
 
 ----
