--- a/en/d/drunken trees.856197.wikitext
+++ b/en/d/drunken trees.856197.wikitext
@@ -1,9 +1,12 @@
 ==English==
 
-===Noun===
-{{head|en|noun|head=[[drunken]] [[tree]]s}}
+===Etymology===
+By analogy to the stumbling gait of a person who is drunk on alcohol.
 
-# {{lb|en|forestry|pluralonly}} (A [[stand#Noun|stand]] of) trees displaced from their normal vertical alignment, especially due to [[thermokarst]].
+===Noun===
+{{en-plural noun|head=[[drunken]] [[tree]]s}}
+
+# {{lb|en|forestry}} (A [[stand#Noun|stand]] of) trees displaced from their normal vertical alignment, especially due to [[thermokarst]].
 #: '''''Drunken trees''' leaning in random directions are often found in spruce forests where discontinuous permafrost has melted.''
 
 ====Synonyms====
