make it sound less like the ingredients are a mystery to science <Watergate salad#42013126>

--- a/en/w/Watergate salad.855389.wikitext
+++ b/en/w/Watergate salad.855389.wikitext
@@ -7,6 +7,6 @@ Various unsubstantiated hypotheses; see Wikipedia.
 {{en-noun}}
 {{wikipedia}}
 
-# A [[sweet]] [[dessert]] [[salad]] made with [[pistachio]]-flavoured instant pudding, whipped topping, crushed [[pineapple]], and small [[marshmallow]]s, and possibly other ingredients.
+# A [[sweet]] [[dessert]] [[salad]] made with [[pistachio]]-flavoured instant pudding, whipped topping, crushed [[pineapple]], and small [[marshmallow]]s, and sometimes other ingredients.
 
 [[Category:en:Salads]]
