--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -5,7 +5,7 @@
 
 ===Etymology 1===
 {{PIE root|en|wed}}
-From {{inh|en|enm|oter}}, {{m|enm|otir}}, {{m|enm|otur}}, {{m|enm|otyre}}, from {{inh|en|ang|oter}}, from {{inh|en|gem-pro|*utraz}}, from {{inh|en|ine-pro|*udrós||aquatic, water-animal}}, from {{der|en|ine-pro|*wed-||water}}. Cognate with {{cog|stq|Otter}}, {{cog|nl|otter}}, {{cog|de|Otter}}, {{cog|sv|utter}}, {{cog|is|otur}}, {{cog|cu|ⰲⱏⰺⰴⱃⰰ|tr=vydra|sc=Glag}}, and {{cog|grc|ὕδρα||water snake}}. More etymology under English [[water]].
+From {{inh|en|enm|oter}}, {{m|enm|otir}}, {{m|enm|otur}}, {{m|enm|otyre}}, from {{inh|en|ang|oter}}, from {{inh|en|gem-pro|*utraz}}, from {{inh|en|ine-pro|*udrós||aquatic, water-animal}}, from {{der|en|ine-pro|*wed-||water}}. Cognate with {{cog|stq|Otter}}, {{cog|nl|otter}}, {{cog|de|Otter}}, {{cog|sv|utter}}, {{cog|no|oter}}, {{cog|is|otur}}, {{cog|cu|ⰲⱏⰺⰴⱃⰰ|tr=vydra|sc=Glag}}, and {{cog|grc|ὕδρα||water snake}}. More etymology under English [[water]].
 
 ====Pronunciation====
 * {{a|RP}} {{IPA|/ˈɒt.ə/|lang=en}}
