--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -75,7 +75,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 * Greek: {{t+|el|διαφήμιση|f}}
 * Gullah: {{t|gul|abbuhtizemu’t}}
 * Hebrew: {{t+|he|פִּרְסוֹמֶת|f|tr=pirsómet}}
-* Hindi: {{t+|hi|इश्तहार|m|tr=iśtahār|sc=Deva}}, {{t+|hi|विज्ञापन|m|sc=Deva}}
+* Hindi: {{t+|hi|इश्तहार|m|sc=Deva}}, {{t+|hi|विज्ञापन|m|sc=Deva}}
 * Hungarian: {{t+|hu|hirdetés}}, {{t+|hu|reklám}}
 * Icelandic: {{t+|is|auglýsing|f}}
 * Indonesian: {{t+|id|iklan}}, {{t+|id|reklame}}
@@ -112,14 +112,14 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 * Tagalog: {{t|tl|pamadya}}
 * Tamil: {{t+|ta|விளம்பரம்}}
 * Telugu: {{t|te|వ్యాపార ప్రకటన}}
-* Thai: {{t+|th|การโฆษณา|tr=gaan kôhtsànaa|sc=Thai}}
+* Thai: {{t+|th|การโฆษณา|sc=Thai}}
 * Turkish: {{t+|tr|reklam}}, {{t+|tr|ilan}}, {{t+|tr|duyuru}}
 * Ukrainian: {{t+|uk|рекла́ма|f|sc=Cyrl}}, {{t+|uk|оголо́шення|n|sc=Cyrl}}, {{t+|uk|ано́нс|m|sc=Cyrl}}, {{t|uk|зая́ва|f|sc=Cyrl}}
 * Vietnamese: {{t+|vi|quảng cáo}} ({{t|vi|廣告|sc=Hani}}), {{t+|vi|giới thiệu}}
 * Volapük: {{t+|vo|noted}}, {{t+|vo|reklam}}, {{t+|vo|nunam}}
 * Võro: {{t|vro|reklaam}}
 * West Frisian: {{t|fy|advertinsje}}, {{t|fy|oankundiging}}
-* Yiddish: {{t|yi|רעקלאַמע|f|tr=reklame|sc=Hebr}}
+* Yiddish: {{t|yi|רעקלאַמע|f|sc=Hebr}}
 {{trans-bottom}}
 
 {{trans-top|public notice}}
