--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -131,6 +131,7 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 * {{l|en|blow upon}}
 * {{l|en|blowup}}
 * {{l|en|blow up in one's face}}
+* {{l|en|blowy}}
 * {{l|en|glassblower}}
 * {{l|en|mind-blowing}}
 * {{l|en|there she blows}}
