--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -6,9 +6,9 @@
 From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from {{der|en|la|senior||[[older]], [[elder]]}}, from {{m|la|senex||old}}. Compare [[sire]], [[signor]], [[seignior]], [[señor]].
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/sɜː(ɹ)/|lang=en}}
-* {{a|US}} {{enPR|sûr}}, {{IPA|/sɝ/|[sɚ]|lang=en}}
-* {{a|Scotland}} {{IPA|/sɪr/|lang=en}}
+* {{a|UK}} {{IPA|/ˈsɜː(ɹ)/|lang=en}}
+* {{a|US}} {{enPR|ˈsûr}}, {{IPA|/ˈsɝ, ˈsɜːɹ/|[ˈsɚ]|lang=en}}
+* {{a|Scotland}} {{IPA|/ˈsɪr/|lang=en}}
 * {{audio|en-us-sir.ogg|Audio (US)|lang=en}}
 * {{rhymes|ɜː(r)|lang=en}}
 
