/* Derived terms */ <badger#42025449>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -29,15 +29,7 @@ From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||ba
 * {{sense|mammal}} {{l|en|cete}}, {{l|en|colony}}
 
 =====Derived terms=====
-{{rel-top|terms derived from ''badger (noun)''}}
-* {{l|en|American badger}}
-* {{l|en|European badger}}
-* {{vern|ferret-badger}} ({{taxlink|Melogale|genus|noshow=1|ver=161103}})
-{{rel-mid}}
-* {{vern|hog badger}} ({{taxlink|Arctonyx collaris|species|noshow=1|ver=161103}})
-* {{l|en|honey badger}}
-* {{l|en|stink badger}}
-{{rel-bottom}}
+{{der3|title=Terms derived from ''badger'' (noun)|American badger|European badger|{{vern|ferret-badger}} ({{taxlink|Melogale|genus|noshow=1|ver=161103}})|{{vern|hog badger}} ({{taxlink|Arctonyx collaris|species|noshow=1|ver=161103}})|honey badger|stink badger|lang=en}}
 
 =====Translations=====
 {{trans-top|mammal}}
