/* Verb */ The entry [[Talk:rot in jail]] failed RFD in 2013, I guess [[rot]] could have +1 sense about that... I'm adding the sense now. <rot#42026801>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -25,6 +25,10 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 #*: '''Rot''', poor bachelor, in your club.
 # {{lb|en|transitive}} To make [[putrid]]; to cause to be wholly or partially decomposed by natural processes.
 #: ''to '''rot''' vegetable fiber''
+# {{lb|en|transitive}} To spend a [[long]] period of [[time]] (in an unpleasant place).
+#: ''to '''rot''' in jail''
+#: ''to '''rot''' in prison''
+#: ''to '''rot''' in Hell''
 # {{lb|en|transitive}} To expose, as flax, to a process of [[maceration]], etc., for the purpose of separating the [[fiber]]; to [[ret]].
 
 ====Synonyms====
