/* Verb */ + figurative <rot#42026806>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -25,7 +25,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 #*: '''Rot''', poor bachelor, in your club.
 # {{lb|en|transitive}} To make [[putrid]]; to cause to be wholly or partially decomposed by natural processes.
 #: ''to '''rot''' vegetable fiber''
-# {{lb|en|transitive}} To spend a [[long]] period of [[time]] (in an unpleasant place).
+# {{lb|en|transitive|figurative}} To spend a [[long]] period of [[time]] (in an unpleasant place).
 #: ''to '''rot''' in jail''
 #: ''to '''rot''' in prison''
 #: ''to '''rot''' in Hell''
