--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -270,6 +270,7 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 
 {{trans-top|To force a current of air upon with the mouth, or by other means}}
 {{trans-mid}}
+* Maori: {{t|mi|pūkeru}}
 {{trans-bottom}}
 
 {{trans-top|to blow a musical instrument to make it give a sound}} <!--5-->
