--- a/en/i/indirection.742105.wikitext
+++ b/en/i/indirection.742105.wikitext
@@ -8,7 +8,7 @@
 {{en-noun}}
 
 # A lack of [[direction]]; [[deviousness]] or [[aimlessness]]
-# {{lb|en|computing}} Use of a [[variable]] or [[object]] through its [[address]]
+# {{lb|en|programming}} Use of a [[variable]] or [[object]] through its [[address]]
 # An indirect action or process.
 
 [[fr:indirection]]
