t+io:[[medikacho]] ([[WT:EDIT|Assisted]]) <quack#42058370>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -126,7 +126,7 @@ c 1630, shortening of [[quacksalver]], from {{etyl|dum|en}} {{m|dum|kwaksalver||
 * Hungarian: {{t+|hu|kuruzsló}}
 * Icelandic: {{t+|is|skottulæknir|m}}
 {{trans-mid}}
-* Ido: {{t+|io|sharlatano}}
+* Ido: {{t+|io|sharlatano}}, {{t|io|medikacho}}
 * Indonesian: {{t+|id|dukun}}
 * Italian: {{t+check|it|ciarlatano|m}}, {{t-check|it|[[medico]] [[empirico]]|m}} <!-- was "[[medico]] [[empirico]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
 * Japanese: {{t|ja|やぶ医者|tr=yabuisha}}, {{t|ja|もぐりの医者|tr=moguri no isha|sc=Jpan}}
