--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Alternative forms===
+* {{l|en|substract}} {{q|obsolete}}
+
 ===Etymology===
 {{bor|en|LL.|subtractio|subtractio, subtractionis}}.
 
