/* English */ <Swiss chard#42061304>

--- a/en/s/Swiss chard.856482.wikitext
+++ b/en/s/Swiss chard.856482.wikitext
@@ -1,18 +1,24 @@
 ==English==
 [[File:SwissChard.jpg|thumb]]
 
+===Etymology===
+The origin of the adjective might be linked to Swiss botanist {{w|Gaspard Bauhin}} who classified the plant in his work ''Phytopinax'' in 1596.<ref>http://zesterdaily.com/cooking/forget-kale-get-swiss-chard-with-pancetta-lemon/</ref>
+
 ===Noun===
 {{en-noun|~}}
 
-# {{taxlink|Beta vulgaris var. cicla|species|noshow=1}}: an edible leafy vegetable.
+# {{lb|en|culinary}} {{taxlink|Beta vulgaris var. cicla|species|noshow=1}}: an edible leafy vegetable; {{l|en|chard}}.
 
 ====Synonyms====
-* [[chard]]
-* [[mangold]]
-* [[silverbeet]]
+* {{l|en|chard}}
+* {{l|en|mangold}}
+* {{l|en|silverbeet}}
 
 ====Translations====
 {{trans-see|chard}}
+
+===References===
+<references/>
 
 [[Category:en:Vegetables]]
 
