t+ne:[[सुँगुर]] t+ps:[[خنځير]] t+ps:[[خوګ]] t+chm:[[сӧсна]] t+mdf:[[тува]] t+os:[[хуы]] t-balance t+gu:[[ડુક્કર]] t+gu:[[શૂકર]] t+pa:[[ਸੂਰ]] t+ba:[[сусҡа]] t+cv:[[сысна]] t+udm:[[па... <pig#42061691>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -141,6 +141,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Avar: {{t|av|болъон}}
 * Azeri: {{t+|az|donuz}}
 * Balinese: {{t|ban|celeng}}
+* Bashkir: {{t|ba|сусҡа}}
 * Basque: {{t+|eu|urde}}, {{t+|eu|zerri}}, {{t+|eu|txerri}}
 * Bau Bidayuh: {{t|sne|oyuo}}
 * Belarusian: {{t|be|свіння́|f}}
@@ -162,6 +163,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 *: Hakka: {{t|hak|豬}}, {{t|hak|猪|tr=chû}}, {{t|hak|豬仔}}, {{t|hak|猪仔|tr=chû-é}}
 *: Mandarin: {{t+|cmn|豬|sc=Hani}}, {{t+|cmn|猪|tr=zhū|sc=Hani}}
 *: Min Nan: {{t+|nan|豬}}, {{t|nan|猪|tr=ti, tu}}, {{t+|nan|豬仔}}, {{t|nan|猪仔|tr=ti-á, tu-á}}
+* Chuvash: {{t|cv|сысна}}
 * Comox: {{t|coo|kʷašu}}
 * Cornish: {{t|kw|hogh|m}}, {{t|kw|mogh|p}}
 * Czech: {{t+|cs|prase|n}}, {{t+|cs|vepř|m}}, {{t+|cs|svině|f}}
@@ -169,6 +171,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Dalmatian: {{t|dlm|puarc|m}}
 * Danish: {{t+|da|svin|n}}, {{t+|da|gris|c}}
 * Dutch: {{t+|nl|zwijn|n}}, {{t+|nl|varken|n}}
+* Eastern Mari: {{t|chm|сӧсна}}
 * Erzya: {{t|myv|туво}}
 * Esperanto: {{qualifier|♂♀}} {{t+|eo|porko}}, {{qualifier|♂}} {{t|eo|virporko}}, {{qualifier|neologism, ♂}} {{t|eo|porkiĉo}}, {{qualifier|♀}} {{t|eo|porkino}}
 * Estonian: {{t|et|siga}}, {{t|et|põrsakest|p}}
@@ -187,6 +190,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Gothic: {{t|got|𐍃𐍅𐌴𐌹𐌽|n|sc=Goth}}
 * Greek: {{t+|el|γουρούνι|n}}
 *: Ancient Greek: {{t|grc|ὗς}}
+* Gujarati: {{t+|gu|ડુક્કર|m}}, {{t|gu|શૂકર|m}}
 * Hawaiian: {{t|haw|puaʻa}}
 * Hebrew: {{t+|he|חֲזִיר|m|tr=khazír}}
 * Hindi: {{t+|hi|सूअर|m|sc=Deva}}
@@ -238,11 +242,13 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Maori: {{t|mi|poaka}}
 * Marathi: {{t|mr|डुकर|m|sc=Deva}}
 * Mazanderani: {{t|mzn|خی|tr=xi}}
+* Moksha: {{t|mdf|тува}}
 * Mongolian: {{t+|mn|гахай|sc=Cyrl}}
 * Montagnais: {{t|moe|kukush}}
 * Motu: {{t|meu|boroma}}
 * Nahuatl: {{t+|nah|pitzotl}}
 * Navajo: {{t|nv|bisóodi}}
+* Nepali: {{t+|ne|सुँगुर|tr=sũgur}}
 * Ngazidja Comorian: {{t|zdj|purunku}}
 * Nivkh: {{t|niv|овӻоӈ|tr=ovx̌oŋ|sc=Cyrl}}
 * Norman: {{t|nrf|couochon|m}}, {{t|nrf|bête à saie|f}}, {{t|nrf|por|m}}, {{t|nrf|gronneux|m}}, {{t|nrf|moussieu|m}}, {{t|nrf|quétot|m}}
@@ -253,9 +259,12 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Old Church Slavonic: {{t|cu|свиниꙗ|f|sc=Cyrs}}
 * Old Turkic: {{t|otk|𐱃𐰆𐰭𐰆𐰕|tr=toŋuz}}
 * Oriya: {{t|or|ଘୁଷୁରିଛୁଆ|tr=ghuṣurichu'ā|sc=Orya}}
+* Ossetian: {{t|os|хуы}}
+* Pashto: {{t+|ps|خنځير|m|tr=xanjír}}, {{t|ps|خوګ|m|tr=xug}}
 * Persian: {{t+|fa|خوک|tr=xuk|sc=fa-Arab}}
 * Polish: {{t+|pl|świnia|f}}
 * Portuguese: {{t+|pt|porco|m}}, {{t+|pt|suíno|m}}
+* Punjabi: {{t|pa|ਸੂਰ|m}}
 * Quechua: {{t|qu|khuchi}}
 * Rapa Nui: {{t|rap|oru}}
 * Romani: {{t|rom|balo|m}}, {{t|rom|bali|f}}
@@ -306,6 +315,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Turkish: {{t+|tr|domuz}}, {{t+|tr|hınzır}}
 * Turkmen: {{t|tk|doňuz}}
 * Tuvan: {{t|tyv|хаван}}
+* Udmurt: {{t|udm|парсь}}
 * Ukrainian: {{t|uk|свиня́|f}}
 * Urdu: {{t|ur|خوک|tr=xūk|sc=ur-Arab}}, {{t|ur|خنزیر|tr=xanzīr|sc=ur-Arab}}, {{t|ur|سؤر|m|tr=sū'ar|sc=ur-Arab}}
 * Urhobo: {{t|urh|esi}}
