--- a/en/r/rules of the road.801538.wikitext
+++ b/en/r/rules of the road.801538.wikitext
@@ -1,8 +1,8 @@
 ==English==
-{{wikipedia|traffic}}
+{{wikipedia|Traffic}}
 
 ===Noun===
-{{en-noun|-}}
+{{en-plural noun}}
 
 # The [[law]]s that govern [[driving]], especially of [[motorist]]s and [[cyclist]]s.
 
