--- a/en/h/hairnet.34110.wikitext
+++ b/en/h/hairnet.34110.wikitext
@@ -29,6 +29,7 @@
 {{trans-mid}}
 * Interlingua: [[rete]] pro le [[capillos]]
 * Irish: {{t|ga|eangach ghruaige|f}}, {{t|ga|líontán gruaige|m}}
+* Italian: {{t+|it|retina}}
 * Japanese: {{t+|ja|コール|tr=kōru|sc=Jpan}}, {{t|ja|ヘアネット|tr=heanetto|sc=Jpan}}
 * Portuguese: [[rede]] para os [[cabelos]] {{g|f}}
 * Russian: {{t+|ru|се́тка|f}} {{qualifier|для воло́с}}
