--- a/en/m/moneygrubber.720248.wikitext
+++ b/en/m/moneygrubber.720248.wikitext
@@ -1,10 +1,13 @@
 {{also|money-grubber}}
 ==English==
 
+===Etymology===
+{{compound|en|money|grubber}}
+
 ===Noun===
 {{en-noun}}
 
-# An [[avaricious]] person
+# An [[avaricious]] person.
 
 ====Related terms====
 * {{l|en|money-grubbing}}
