/* Translations */ moving to [[mass]] <weight#42072799>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -100,7 +100,7 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 * Chinese:
 *: Mandarin: {{t+|cmn|重量|tr=zhòngliàng|sc=Hani}}, {{qualifier|body weight}} {{t+|cmn|體重|sc=Hani}}, {{t+|cmn|体重|tr=tǐzhòng|sc=Hani}}
 * Czech: {{t+|cs|váha|f}}
-* Danish: {{t|da|vægt|c}}
+* Danish: {{t|da|vægt|c}}, {{t|da|tyngdekraft|c}}
 * Dutch: {{t+|nl|gewicht}}
 * Esperanto: {{t|eo|pezo}}
 * Estonian: {{t|et|kaal}}
@@ -247,30 +247,7 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 * Turkish: {{t+|tr|ağırlık}}
 {{trans-bottom}}
 
-{{trans-top|physics: mass}}
-* Arabic: {{t+|ar|وَزْن|m}}
-* Armenian: {{t+|hy|զանգված}}
-* Czech: {{t+|cs|váha|f}}
-* Danish: {{t|da|vægt|c}}, {{t+|da|masse|c}}
-* Faroese: {{t|fo|vekt|f}}, {{t|fo|massi|m}}
-* Finnish: {{t+|fi|paino}}
-* French: {{t+|fr|masse}}
-* German: {{t+|de|Masse|f}}
-* Greek: {{t+|el|μάζα|f}}
-* Hungarian: {{t+|hu|tömeg}}
-* Italian: {{t+|it|massa|f}}
-{{trans-mid}}
-* Japanese: {{t|ja|重さ|tr=omosa}}, {{t+|ja|重量|tr=jūryō}}, {{t|ja|荷重|tr=kajū}}
-* Malay: {{t|ms|berat}}
-* Portuguese: {{t+|pt|massa|f}}
-* Romanian: {{t+|ro|masă|f}}
-* Russian: {{t+|ru|вес|m}}, {{t+|ru|ма́сса|f}}
-* Scots: {{t|sco|weicht}}
-* Slovak: {{t|sk|váha|f}}
-* Spanish: {{t+|es|masa|f}}
-* Swedish: {{t+|sv|massa|c}}, {{t+|sv|vikt|c}}
-* Turkish: {{t+|tr|ağırlık}}
-{{trans-bottom}}
+{{trans-see|physics: mass|mass}}
 
 {{trans-top|statistics: multiplier}}
 * Arabic: {{t+|ar|وَزْن}}
