--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -6,6 +6,7 @@
 From {{etyl|la|en}} {{m|la|minimum}}, neuter form of {{m|la|minimus||least, smallest}}.
 
 ===Pronunciation===
+* {{a|RP}} {{IPA|/ʹmɪnɪmm̩/|lang=en}}
 * {{audio|En-us-minimum.ogg|Audio (US)|lang=en}}
 
 ===Noun===
