t+sq:[[vidër]] t+bn:[[ভোঁদড়]] ([[WT:EDIT|Assisted]]) <otter#42086792>

--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -33,7 +33,7 @@ From {{inh|en|enm|oter}}, {{m|enm|otir}}, {{m|enm|otur}}, {{m|enm|otyre}}, from 
 
 =====Translations=====
 {{trans-top|mammal}}
-* Albanian: {{t+|sq|lundërz|f}}
+* Albanian: {{t+|sq|lundërz|f}}, {{t+|sq|vidër|f}}
 * Algonquin: {{t|alq|nigig}}
 * Arabic: {{t|ar|ثَعْلَب الْمَاء|m}}
 * Armenian: {{t+|hy|ջրասամույր}}
@@ -42,6 +42,7 @@ From {{inh|en|enm|oter}}, {{m|enm|otir}}, {{m|enm|otur}}, {{m|enm|otyre}}, from 
 * Basque: {{t+|eu|igaraba}}, {{t+|eu|urtxakur}}
 * Bau Bidayuh: {{t|sne|biron}}
 * Belarusian: {{t|be|вы́дра|f}}
+* Bengali: {{t|bn|ভোঁদড়}}
 * Breton: {{t+|br|dourgi|m}}
 * Bulgarian: {{t+|bg|ви́дра|f}}
 * Burmese: {{t+|my|ဖျံ|sc=Mymr}}
