--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -88,8 +88,7 @@ From {{inh|en|enm|oter}}, {{m|enm|otir}}, {{m|enm|otur}}, {{m|enm|otyre}}, from 
 * Lun Bawang: {{t|lnd|dengen}}
 {{trans-mid}}
 * Macedonian: {{t|mk|видра|f}}
-* Malay:
-*: Rumi: {{t|ms|anjing air}}, {{t|ms|berang-berang}}
+* Malay: {{t|ms|anjing air}}, {{t|ms|berang-berang}}
 *: Jawi: {{t|ms|انجيڠ اءير|sc=Arab}}, {{t|ms|برڠ٢|sc=Arab}}
 * Maltese: {{t|mt|lutra}}
 * Manx: {{t|gv|dooarchoo|m}}, {{t|gv|moddey ushtey|m}}
