--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -55,6 +55,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Basque: {{t+|eu|erbinude}}
 * Belarusian: {{t|be|ла́ска|f}}
 * Breton: {{t+|br|kaerell}}
+* Bulgarian: {{t+|bg|невесту́лка|f}}
 * Catalan: {{t|ca|mostela|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|黃鼠狼|sc=Hani}}, {{t+|cmn|黄鼠狼|tr=huángshǔláng|sc=Hani}}
