/* Proper noun */ wrong definition <Russian Soviet Federative Socialist Republic#42091016>

--- a/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
+++ b/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
@@ -3,7 +3,7 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# The official name for modern day [[Russia]] under the Communist Party from 1917 to 1991. The leader of a confederation of communist countries called the Union of Soviet Socialist Republics. The RSFSR and USSR both collapsed in 1991.
+# The official name for modern day [[Russia]] under the Communist Party from 1936 to 1991 (from 1918 to 1937, according to the Constitution of the RSFSR, called the Russian Socialist Federative Soviet Republic). Part of the USSR from 1922 to 1991.
 
 ====Synonyms====
 * {{l|en|Russian SFSR}}
