--- a/en/a/ADH.26250.wikitext
+++ b/en/a/ADH.26250.wikitext
@@ -13,7 +13,7 @@
 * {{l|en|DHA}}
 * {{l|en|had}}
 
-[[Category:English three-letter words]]
+[[Category:English three-letter abbreviations]]
 
 [[he:ADH]]
 [[hu:ADH]]
