--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -197,6 +197,7 @@ Literally "beyond the river [[Dniester]]". {{etystub|lang=en}}
 * {{l|ro|Nistru}} {{qualifier|river}}
 
 [[Category:ro:Place names]]
+[[Category:en:Transnistria]]
 
 ----
 
