--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -209,7 +209,7 @@ Literally "beyond the river [[Dniester]]". {{etystub|lang=en}}
 
 # {{place|pt|breakaway country|c/Moldova|t1=Transnistria}}
 
-{{catlangcode|es|Moldova|Transnistria}}
+{{catlangcode|es|Moldova}}
 
 [[cs:Transnistria]]
 [[fr:Transnistria]]
