t+is:[[eyland]] ([[WT:EDIT|Assisted]]) <island#42101236>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -129,7 +129,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Hebrew: {{t+|he|אִי|m|tr=i}}
 * Hindi: {{t+|hi|द्वीप|m|sc=Deva}}, {{t+|hi|टापू|m|sc=Deva}}
 * Hungarian: {{t+|hu|sziget}}
-* Icelandic: {{t+|is|ey|f}}, {{t+|is|eyja}}
+* Icelandic: {{t+|is|ey|f}}, {{t+|is|eyja}}, {{t|is|eyland|n}}
 * Ido: {{t+|io|insulo}}
 * Igbo: {{t|ig|àgwè}}, {{t|ig|àgwà}}
 * Ilocano: {{t|ilo|puro}}
