/* Adjective */ translations section <extratropical#42105508>

--- a/en/e/extratropical.742299.wikitext
+++ b/en/e/extratropical.742299.wikitext
@@ -12,4 +12,12 @@
 ====Derived terms====
 * {{l|en|extratropical cyclone}}
 
+====Translations====
+{{trans-top|occurring outside the tropics}}
+* Norwegian:
+*: Bokmål: {{t|nb|ekstratropisk}}
+*: Nynorsk: {{t|nn|ekstratropisk}}
+{{trans-mid}}
+{{trans-bottom}}
+
 [[fr:extratropical]]
