--- a/en/t/Touretter.741408.wikitext
+++ b/en/t/Touretter.741408.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Etymology===
+{{suffix|en|Tourette|er}}
+
 ===Noun===
 {{en-noun}}
 
@@ -11,4 +14,5 @@
 {{trans-mid}}
 {{trans-bottom}}
 
+[[Category:English eponyms]]
 [[de:Touretter]]
