/* Translations */ <executive order#42165544>

--- a/en/e/executive order.776982.wikitext
+++ b/en/e/executive order.776982.wikitext
@@ -8,9 +8,12 @@
 
 ====Translations====
 {{trans-top|decree issued on the authority of the executive branch of government}}
-{{trans-mid}}
+* Chinese:
+*: Cantonese: {{t-needed|yue}}
+*: Mandarin: {{t-needed|cmn}}
 * Japanese: {{t|ja|大統領令|tr=daitōryōrei}}
-* Korean: {{t+|ko|대통령령}}, {{t+|ko|大統領令}}
+{{trans-mid}}
+* Korean: {{t-needed|ko}}
 {{trans-bottom}}
 
 ===See also===
