--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -52,7 +52,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 #: ''The '''pig''' was cracked, and molten metal was oozing from the side.''
 # {{lb|en|engineering}} A device for cleaning or inspecting the inside of an oil or gas [[pipeline]], or for separating different substances within the pipeline. Named for the pig-like squealing noise made by their progress.
 #: ''Unfortunately, the '''pig''' sent to clear the obstruction got lodged in a tight bend, adding to the problem.''
-# {{lb|en|pejorative}} a person who is obese to the extent of resembling a pig (the animal)
+# {{lb|en|pejorative}} A person who is obese to the extent of resembling a pig (the animal).
 # {{lb|en|US|military|slang}} The general-purpose M60 [[machine gun]], considered to be heavy and bulky.
 #: ''Unfortunately, the M60 is about twenty-four pounds and is very unbalanced. You try carrying the '''pig''' around the jungle and see how you feel.''
 # {{lb|en|uncountable}} A simple [[dice]] [[game]] in which players roll the dice as many times as they like, either accumulating a greater score or losing previous points gained.
