ety <sales slip#42174725>

--- a/en/s/sales slip.776058.wikitext
+++ b/en/s/sales slip.776058.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-A [[slip]] of paper given when a [[sale]] is made.
+{{compound|en|sales|slip}}
 
 ===Noun===
 {{en-noun}}
