t+cmn:[[行政命令]] t+es:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <executive order#42175433>

--- a/en/e/executive order.776982.wikitext
+++ b/en/e/executive order.776982.wikitext
@@ -10,10 +10,11 @@
 {{trans-top|decree issued on the authority of the executive branch of government}}
 * Chinese:
 *: Cantonese: {{t-needed|yue}}
-*: Mandarin: {{t-needed|cmn}}
+*: Mandarin: {{t+|cmn|行政命令|tr=xíngzhèng mìnglìng}}
 {{trans-mid}}
 * Japanese: {{t|ja|大統領令|tr=daitōryōrei}}
 * Korean: {{t-needed|ko}}
+* Spanish: {{t-needed|es}}
 {{trans-bottom}}
 
 ===See also===
