--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -187,7 +187,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare Middle Dutch {{m|d
 * Tagalog: {{t|tl|bula}}, {{t+|tl|kulo}}
 * Tamil: {{t+|ta|குமிழி|sc=Taml}}
 * Telugu: {{t+|te|బుడగ}}, {{t+|te|బుడ్డ|sc=Telu}}
-* Thai: {{t+|th|ฟอง|tr=fakhang|sc=Thai}}
+* Thai: {{t+|th|ฟอง|tr=fɔɔng|sc=Thai}}
 * Turkish: {{t+|tr|köpük}}
 * Turkmen: {{t|tk|köpürjik}}
 * Ukrainian: {{t|uk|пузи́р|m|sc=Cyrl}}, {{t|uk|міху́р|m|sc=Cyrl}}
