--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -120,7 +120,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Catalan: {{t+|ca|cosa|f}}
 * Chichewa: {{t|ny|chinthu}}
 * Chinese:
-*: Cantonese: {{t|yue|東西}}, {{t|yue|东西|tr=dung1 sai1}}, {{t|yue|物|tr=mat6}}, {{t|yue|事物|tr=si6 mat6}}
+*: Cantonese: {{t|yue|嘢|tr=je5}}, {{t|yue|物|tr=mat6}}, {{t|yue|事物|tr=si6 mat6}}
 *: Mandarin: {{t+|cmn|東西|sc=Hani}}, {{t+|cmn|东西|tr=dōngxi|sc=Hani}}, {{t+|cmn|物|tr=wù|sc=Hani}}, {{t+|cmn|事物|tr=shìwù|sc=Hani}}
 * Czech: {{t+|cs|věc|f}}
 * Danish: {{t+|da|ting|c}}
