--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -25,7 +25,7 @@
 * Finnish: {{t|fi|kvadriljardi}}
 * French: {{t+|fr|quadrilliard}}
 * German: {{t+|de|Quadrilliarde}}
-* Italian: {{t|it|quattriliardo}}
+* Italian: {{t|it|quatriliardo}}
 * Japanese: {{t|ja|千秭|tr=せんし, senshi|sc=Jpan}}
 * Malay: {{t|ms|oktilion}}
 {{trans-mid}}
