--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -3,7 +3,9 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{m|ang|stæf}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*stabaz}}. Cognate with Dutch {{m|nl|staf}}, German {{m|de|Stab}}, Swedish {{m|sv|stav}}. Sense of "group of military officers that assists a commander", attested from 1702, is influenced from German {{m|de|Stab}}.
+From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{m|ang|stæf}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*stabaz}}. Cognate with Dutch {{m|nl|staf}}, German {{m|de|Stab}}, Swedish {{m|sv|stav}}. 
+
+Sense of "group of military officers that assists a commander" and related senses, attested from 1702, is influenced from German {{m|de|Stab}}.
 
 ===Pronunciation===
 * {{a|RP}} {{enPR|stäf}}, {{IPA|/stɑːf/|lang=en}}
