--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -5,7 +5,7 @@
 ===Etymology===
 From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{m|ang|stæf}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*stabaz}}. Cognate with Dutch {{m|nl|staf}}, German {{m|de|Stab}}, Swedish {{m|sv|stav}}. 
 
-Sense of "group of military officers that assists a commander" and related senses, attested from 1702, is influenced from German {{m|de|Stab}}.
+Sense of "group of military officers that assists a commander" and similar meanings, attested from 1702, is influenced from German {{m|de|Stab}}.
 
 ===Pronunciation===
 * {{a|RP}} {{enPR|stäf}}, {{IPA|/stɑːf/|lang=en}}
