--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -7,7 +7,7 @@
 * {{rhymes|ɛt|lang=en}}
 
 ===Etymology 1===
-From 16th century criminal slang, likely from {{m|en|abet}} or {{etyl|ang|en}} {{m|ang|bætan||to make better}}.
+From 16th century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bætan||to make better}}.
 
 ====Noun====
 {{en-noun}}
@@ -183,7 +183,7 @@ Abbreviation.
 ==Crimean Tatar==
 
 ===Noun===
-{{head|crh|nouns}}
+{{head|crh|noun}}
 
 # [[face]]
 # [[side]], [[direction]]
@@ -198,8 +198,6 @@ Abbreviation.
 
 ===References===
 * {{R:Useinov-Mireev 2002}}
-
-[[Category:Crimean Tatar nouns]]
 
 ----
 
@@ -220,6 +218,7 @@ The form {{m|de|bete}} is more common.
 ----
 
 ==Italian==
+
 ===Etymology===
 From {{der|it|he|בַּיִ״ת|tr=báyiṯ}}.
 
@@ -246,7 +245,7 @@ From {{der|it|he|בַּיִ״ת|tr=báyiṯ}}.
 ==Latvian==
 
 ===Etymology===
-From {{etyl|bat-pro|lv}} {{m|ine-bsl-pro|*bet}}, from {{etyl|ine-pro|lv}} {{m|ine-pro|*be}}, {{m|ine-pro|*bʰe||outside, without}} (whence also {{etyl|lv|-}} preposition {{m|lv|bez}}, [[q.v.]]), to which an old particle ''-t'' was added, visible also in the {{etyl|lv|-}} particle {{m|lt|it}} and the adverb {{m|lv|šeit||here}} ([[q.v.]]). Cognates include {{cog|lt|bèt}}, {{cog|xsv|bat}}.<ref>{{R:lv:LEV}}</ref>
+From {{etyl|bat-pro|lv}} {{m|ine-bsl-pro|*bet}}, from {{inh|lv|ine-pro|*be}}, {{m|ine-pro|*bʰe||outside, without}} (whence also {{etyl|lv|-}} preposition {{m|lv|bez}}, [[q.v.]]), to which an old particle ''-t'' was added, visible also in the {{etyl|lv|-}} particle {{m|lt|it}} and the adverb {{m|lv|šeit||here}} ([[q.v.]]). Cognates include {{cog|lt|bèt}}, {{cog|xsv|bat}}.<ref>{{R:lv:LEV}}</ref>
 
 ===Pronunciation===
 * {{lv-IPA|bɛt}}
@@ -464,7 +463,19 @@ From {{inh|osx|gem-pro|*batiz}}.
 ===Noun===
 {{head|tpi|noun}}
 
-# [[bed]].
+# [[bed]]
+
+----
+
+==Vilamovian==
+
+===Pronunciation===
+* {{audio|Wym-bet (wersja Józefa Gary).ogg|Audio|lang=wym}}
+
+===Noun===
+{{wym-noun|n|bet}}
+
+# [[bed]]
 
 ----
 
